--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daily-diet-api",
-  "version": "0.5.0",
+  "version": "1.0.0",
   "description": "",
   "main": "index.ts",
   "scripts": {
@@ -26,6 +26,7 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
     "knex": "^3.0.1",
+    "moment": "^2.30.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
